Rename project name to dll2mmd.

--- a/src/Dll2Mmd/dll2mmd.csproj
+++ b/src/Dll2Mmd/dll2mmd.csproj
@@ -9,6 +9,9 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <PackAsTool>true</PackAsTool>
+    <ToolCommandName>dll2mmd</ToolCommandName>
+    <PackageOutputPath>../../nupkg</PackageOutputPath>
   </PropertyGroup>
 
 </Project>
