Add command line option support.

--- a/src/Dll2Mmd/dll2mmd.csproj
+++ b/src/Dll2Mmd/dll2mmd.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\ClassGraph\ClassGraph.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
+  </ItemGroup>
+
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
