--- a/src/Dll2Mmd/dll2mmd.csproj
+++ b/src/Dll2Mmd/dll2mmd.csproj
@@ -16,6 +16,9 @@
     <PackAsTool>true</PackAsTool>
     <ToolCommandName>dll2mmd</ToolCommandName>
     <PackageOutputPath>../../nupkg</PackageOutputPath>
+    <Version>1.0.0</Version>
+    <Authors>ywh</Authors>
+    <Company>ywh</Company>
   </PropertyGroup>
 
 </Project>
