--- a/src/Dll2Mmd/dll2mmd.csproj
+++ b/src/Dll2Mmd/dll2mmd.csproj
@@ -8,6 +8,10 @@
     <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
   </ItemGroup>
 
+  <ItemGroup>
+      <None Include="..\..\README.md" Pack="true" PackagePath="\"/>
+  </ItemGroup>
+
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
@@ -19,6 +23,7 @@
     <Version>1.0.1</Version>
     <Authors>ywh</Authors>
     <Company>ywh</Company>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
 
 </Project>
