--- a/src/Dll2Mmd/dll2mmd.csproj
+++ b/src/Dll2Mmd/dll2mmd.csproj
@@ -20,7 +20,8 @@
     <PackAsTool>true</PackAsTool>
     <ToolCommandName>dll2mmd</ToolCommandName>
     <PackageOutputPath>../../nupkg</PackageOutputPath>
-    <Version>1.0.2</Version>
+    <Version>1.0.3</Version>
+    <Tags>mermaid, mermaid.js, dotnet, class-diagram</Tags>
     <Authors>ywh</Authors>
     <Company>ywh</Company>
     <PackageReadmeFile>README.md</PackageReadmeFile>
