--- a/src/Dll2Mmd/dll2mmd.csproj
+++ b/src/Dll2Mmd/dll2mmd.csproj
@@ -1,5 +1,20 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <PropertyGroup>
+    <OutputType>Exe</OutputType>
+    <TargetFramework>net6.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
+    <PackAsTool>true</PackAsTool>
+    <ToolCommandName>dll2mmd</ToolCommandName>
+    <PackageOutputPath>../../nupkg</PackageOutputPath>
+    <Version>1.0.5</Version>
+    <PackageTags>mermaid diagram generate</PackageTags>
+    <Authors>ywh</Authors>
+    <Company>ywh</Company>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\ClassGraph\ClassGraph.csproj" />
   </ItemGroup>
@@ -11,20 +26,5 @@
   <ItemGroup>
       <None Include="..\..\README.md" Pack="true" PackagePath="\"/>
   </ItemGroup>
-
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-    <PackAsTool>true</PackAsTool>
-    <ToolCommandName>dll2mmd</ToolCommandName>
-    <PackageOutputPath>../../nupkg</PackageOutputPath>
-    <Version>1.0.4</Version>
-    <PackageTags>mermaid class diagram markdown dotnet tool dll generate</PackageTags>
-    <Authors>ywh</Authors>
-    <Company>ywh</Company>
-    <PackageReadmeFile>README.md</PackageReadmeFile>
-  </PropertyGroup>
 
 </Project>
